--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 .gitattributes	export-ignore
 .gitignore	export-ignore
 .gitmodules	export-ignore
+.travis.yml	export-ignore
 mods/ajax-post-edit export-ignore
 mods/ajax-quick-post export-ignore
 mods/attachment-mod export-ignore
