--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 .gitignore	export-ignore
 .gitmodules	export-ignore
 .travis.yml	export-ignore
+tests	export-ignore
 mods/ajax-post-edit export-ignore
 mods/ajax-quick-post export-ignore
 mods/attachment-mod export-ignore
